--- a/TikFollow/App/index.html
+++ b/TikFollow/App/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="490" height="260" src="https://tiktok.com/plzembed" frameborder="0"></iframe>
-    <h2>0 | 0</h2>
+    <div class="contantier">
+        <iframe width="490" height="260" src="https://tiktok.com/plzembed" frameborder="0"></iframe>
+        <h2>0 | 0</h2>
+    </div>
 </body>
 </html>
