--- a/TikFollow/App/index.html
+++ b/TikFollow/App/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="contantier">
-        <iframe width="490" height="260" src="https://tiktok.com/plzembed" frameborder="0"></iframe>
-        <h2>0 | 0</h2>
+        <div class="contantier2">
+            <iframe width="490" height="260" src="https://tiktok.com/plzembed" frameborder="0"></iframe>
+            <h2>0 | 0</h2>
+        </div>
     </div>
 </body>
 </html>
